刑事訴訟法 1997.12.12

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -50,9 +50,9 @@
 
 * 26 第十七條至第二十條及第二十四條關於推事迴避之規定，於檢察官及辦理檢察事務之書記官準用之。但不得以曾於下級法院執行檢察官、書記官或通譯之職務，為迴避之原因。檢察官及前項書記官之迴避，應聲請所屬首席檢察官或檢察長核定之。首席檢察官之迴避，應聲請直接上級法院首席檢察官或檢察長核定之；其檢察官僅有一人者亦同。
 
-* 27 被告得隨時選任辯護人。犯罪嫌疑人受司法警察官或司法警察調查者，亦同。被告或犯罪嫌疑人之法定代理人、配偶、直系或三親等內旁系血親或家長、家屬，得獨立為被告或犯罪嫌疑人選任辯護人。
+* 27 被告得隨時選任辯護人。犯罪嫌疑人受司法警察官或司法警察調查者，亦同。被告或犯罪嫌疑人之法定代理人、配偶、直系或三親等內旁系血親或家長、家屬，得獨立為被告或犯罪嫌疑人選任辯護人。被告或犯罪嫌疑人因智能障礙無法為完全之陳述者，應通知前項之人得為被告或犯罪嫌疑人選任辯護人。但不能通知者，不在此限。
 
-> 釋：一、為期保護被告及犯罪嫌疑人之正當權益，爰將本條第一項原定「於起訴後」四字刪除，俾使起訴前之被告亦得隨時選任辯護人。又本法對於涉嫌犯罪而受司法警察官或司法警察調查中，尚未移送檢察官者，稱曰「犯罪嫌疑人」（見本法第二百二十九條第二項、第二百三十條第二項、第二百三十一條第二項），其權益亦有保護之必要，爰於本條第一項增訂「犯罪嫌疑人受司法警察官或司法警察調查者，亦同」一句，以示犯罪嫌疑人亦有選任辯護人之權。二、本條第二項增列「或犯罪嫌疑人」字樣，以配合第一項之修正。
+> 釋：智能障礙者多由無法理解辯護人為何，及無法理解選任辯護人之程序意義與功能情事，故應詢問得獨立為其選任辯護人之人是否為被告選任辯護人，始有其意義，並保障智能障礙被告得選任辯護人之程序利益。
 
 * 28 每一被告選任辯護人，不得逾三人。
 
@@ -64,9 +64,9 @@
 
 > 釋：一、本條原僅針對起訴後被告之辯護人而設。茲因起訴前亦許被告或犯罪嫌疑人選任辯護人，本條自應予以配合修正。二、辯護人之選任，固應以書面為之，惟本條第二項規定之「委任狀」，易與司法狀紙相混，尤其犯罪嫌疑人於司法警察官或司法警察調查中欲選任辯護人時，如必須前往法院購用司法狀紙，顯有不便，自宜參照本法第二百四十二條第一項用語，改訂為「委任書狀」，以資概括。爰將本條第一項修正為：「選任辯護人，應提出委任書狀」。三、本條修正第二項，規定起訴前辯護人之選任，在檢察官偵查中被告或其家屬等所具之委任書狀，應提出於檢察官，在司法警察官或司法警察調查中犯罪嫌疑人或其家屬等所具之委任書狀，應提出於司法警察官。至於起訴後辯護人之選任，仍照現行作法，應於每審級提出於法院。
 
-* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審之案件，於審判中未經選任辯護人者，審判長應指定公設辯護人為其辯護；其他審判案件認有必要者，亦同。前項案件，選任辯護人於審判期日無正常理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。
+* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審案件或被告因智能障礙無法為完全之陳述，於審判中未經選任辯護人者，審判長應指定公設辯護人為其辯護；其他審判案件認有必要者，亦同。前項案件選任辯護人於審判期日無正當理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。
 
-> 釋：一、本條係關於強制辯護之規定。惟按何種案件應行強制辯護，須憑起訴法條而為認定，在偵查階段，被告未經起訴，尚不發生強制辯護之問題。且在偵查階段之檢察官、司法警察官或司法警察，僅對被告或犯罪嫌疑人之犯罪情形加以偵查或調查及蒐集證據，尚無需就法律或證據互為辯論，與審判程序必須公開辯論之規定情形不同，故在偵查程序中被告或犯罪嫌疑人選任辯護人，已足保護其權益，如不願選任或雖經選任而辯護人怠於執行職務者，實施偵查程序之公務員自無代為指定公設辯護人之必要，故修正本條例第一項，於第二句增列「於審判中」四字，第四句增列「審判」二字，以示本條之規定僅適用於審判程序。二、第二項至第四項均不修正。
+> 釋：智能障礙者因智力不足，不能於任何案件，應有辯護人為其辯護始足維護其權益，若其配偶、直系或三親等內旁系血親或家長、家屬或法定代理人未為之選任辯護人者，應指定公設辯護人為其辯護。
 
 * 32 被告有數辯護人者，送達文書應分別為之。
 
@@ -78,7 +78,9 @@
 
 > 釋：本條原僅規定審判中之辯護人得接見羈押之被告，第二十七條修正後，偵查中所選任之辯護人自亦得接見羈押之被告或犯罪嫌疑人，並互通書信，爰修正本條，增列「犯罪嫌疑人及」六字，俾使於偵查及審判程序中均能適用。
 
-* 35 被告或自訴人之配偶、直系或三親等內旁系血親或家長、家屬或被告之法定代理人於起訴後，得向法院以書狀或於審判期日以言詞陳明為被告或自訴人之輔佐人。輔佐人得在法院陳述意見。
+* 35 被告或自訴人之配偶、直系或三親等內旁系血親或家長、家屬或被告之法定代理人於起訴後，得向法院以書狀或於審判期日以言詞陳明為被告或自訴人之輔佐人。輔佐人得在法院陳述意見。被告或犯罪嫌疑人因智能障礙無法為完全之陳述者，應有第一項得為輔佐人之人或其委任之人或主管機關指派之社工人員為輔佐人陪同在場。但經合法通知無正當理由不到場者，不在此限。
+
+> 釋：智能障礙者保護法第五十七條規定：「實施刑事訴訟程序之公務員，於智能障礙者涉案或作證時，應就其障礙類別之特別需要，提供必要之協助。」故有於刑事訴訟法中仿兒童少年性交易防治法第十條「案件偵查審判中於訊問兒童或少年時，主管機關應指派社工人員陪同在場，並得陳述意見。」之規定，增列上述條款，以有專業社工人員在場協助前提下，使得進行訊問，以期發現真實並保障智能障礙者之權益。
 
 * 36 最重本刑為拘役或專科罰金之案件，被告於審判中或偵查中得委任代理人到場。但法院或檢察官認為必要時，仍得命本人到場。
 
@@ -200,67 +202,137 @@
 
 * 90 被告抗拒拘提、逮捕或脫逃者，得用強制力拘提或逮捕之。但不得逾必要之程度。
 
-* 91 拘提或因通緝逮捕之被告，應即解送指定之處所；如三日內不能達到指定之處所者，應先行解送較近之法院，訊問其人有無錯誤。
+* 91 拘提或因通緝逮捕之被告，應即解送指定之場所；如二十四小時內不能達到指定之處所者，應分別其命拘提或通緝者為法院或檢察官，先行解送較近之法院或檢察機關，訊問其人有無錯誤。
 
-* 92 無偵查犯罪權限之人逮捕現行犯者，應即送交檢察官、司法警察官或司法警察。司法警察官、司法警察逮捕或接受現行犯者，應即解送檢察官。對於第一項逮捕現行犯之人，應詢其姓名、住、居所及逮捕之事由。
+> 釋：一、本條原所規定之「三日」，修正為「二十四小時」，以符合憲法保障人權之意旨。二、拘提或因通緝逮捕之被告，如二十四小時內不能解送到達指定之處所者，明定分別視其命拘提或通緝者為法院或檢察官，以決定先行解送之處所，俾求明確。
 
-* 93 被告因拘提或逮捕到場者，應即時詢問，至遲不得逾二十四小時。除認其有應羈押之情形外，於訊問畢後應即釋放或命具保、責付或限制住居。
+* 92 無偵查犯罪權限之人逮捕現行犯者，應即送交檢察官、司法警察官或司法警察。司法警察官、司法警察逮捕或接受現行犯者，應即解送檢察官。但所犯最重本刑為一年以下有期徒刑、拘役或專科罰金之罪、告訴或請求乃論之罪，其告訴或請求已經撤回或已逾告訴期間者，得經檢察官之許可，不予解送。對於第一項逮捕現行犯之人，應詢其姓名、住所或居所及逮捕之事由。
+
+> 釋：基於告訴乃論案件具備合法之告訴係屬訴訟條件，在司法警察機關之階段既然告訴已經撤回或已逾告訴期間者，自無再將人犯解送檢察官之必要，亦可使人犯之人身自由不受到不當之拘束，同時減輕檢察官訊問之負擔。因此，修正本條第二項，增列所犯係告訴或請求乃論之罪其告訴或請求已經撤回或已逾告訴期間者，得不解送。
+
+* 93 被告或犯罪嫌疑人因拘提或逮捕到場者，應即時訊問。偵查中經檢察官訊問後，認有羈押之必要者，應自拘提或逮捕之時起二十四小時內，敘明羈押之理由，聲請該管法院羈押之。前項情形，未經聲請者，檢察官應即將被告釋放。但如認有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無聲請羈押之必要者，得逕命具保、責付或限制住居；如不能具保、責付或限制住居，而有必要情形者，仍得聲請法院羈押之。第一項至第三項之規定，於檢察官接受法院依少年事件處理法或軍事審判機關依軍事審判法移送之被告時，準用之。法院於受理前三項羈押之聲請後，應即時訊問。
+
+> 釋：明定法官、檢察官應即時訊問因拘提或逮捕到場之被告或犯罪嫌疑人。並規定檢察官聲請法院羈押等程序。
+
+* 93.1 第九十一條及前條第二項所定之二十四小時，有左列情形之一者，其經過之時間不予計入。但不得有不必要之遲延：一、因交通障礙或其他不可抗力事由所生不得已之遲滯。二、在途解送時間。三、依第一百條之二第一項規定不得為詢問者。四、因被告或犯罪嫌疑人身體健康突發之事由，事實上不能訊問者。五、被告或犯罪嫌疑人表示已選任辯護人，因等候其辯護人到場致未予訊問者。但等候時間不得逾四小時。六、被告或犯罪嫌疑人須由通譯傳譯，因等候其通譯到場致未予訊問者。但等候時間不得逾六小時。七、經檢察官命具保或責付之被告，在候保或候責付中者。但候保或候責付時間不得逾四小時。八、犯罪嫌疑人經法院提審之期間。前項各款情形之經過時間內不得訊問。因第一項之法定障礙事由致二十四小時內無法移送該管法院者，檢察官聲請羈押時，並應釋明其事由。
+
+> 釋：一、本條新增。二、按憲法第八條第二項所謂至遲於二十四小時內移送之「二十四小時」，係指客觀上得為偵審之進行者而言，遇有法定障礙事由者，不應予以計入，惟現行法並無相關法定障礙事由之規定，實有訂定明文之必要。
 
 * 94 訊問被告，應先詢其姓名、年齡、籍貫、職業、住、居所，以查驗其人有無錯誤，如係錯誤應即釋放。
 
-* 95 訊問被告，應告以犯罪之嫌疑及所犯罪名。罪名經告知被告後，認為應變更者，應再告知。
+* 95 訊問被告應先告知左列事項：一、犯罪嫌疑及所犯所有罪名。罪名經告知後，認為應變更者，應再告知。二、得保持緘默，無須違背自己之意思而為陳述。三、得選任辯護人。四、得請求調查有利之證據。
+
+> 釋：參考承認被告有緘默權之立法例，明定訊問被告時，應告以「無須違背自己之意思而為陳述」，以保障被告得自由陳述及保持緘默之權利。
 
 * 96 訊問被告，應與以辯明犯罪嫌疑之機會；如有辯明，應命就其始末連續陳述；其陳述有利之事實者，應命其指出證明之方法。
 
 * 97 被告有數人時，應分別訊問之；其未經訊問者，不得在場。但因發見真實之必要，得命其對質，被告亦得請求對質。對於被告之請求對質，除顯無必要者，不得拒絕。
 
-* 98 訊問被告，應出以懇切之態度，不得用強暴、脅迫、利誘、詐欺及其他不正之方法。
+* 98 訊問被告應出以懇切之態度，不得用強暴、脅迫、利誘、詐欺、疲勞訊問或其他不正之方法。
+
+> 釋：文字修正，刪除「犯罪嫌疑人或」等字。
 
 * 99 被告為聾或啞或語言不通者，得用通譯，並得以文字訊問或命以文字陳述。
 
 * 100 被告對於犯罪之自白及其他不利之陳述，並其所陳述有利之事實與指出證明之方法，應於筆錄內記載明確。
 
-* 101 被告經訊問後，認為有第七十六條所定之情形者，於必要時得羈押之。
+* 100.1 本章之規定，於司法警察官或司法警察詢問犯罪嫌疑人時，準用之。
 
-* 102 羈押被告，應用押票。押票，應按被告指印，並記載左列事項：一、被告之姓名、性別、年齡、籍貫及住、居所。二、案由。三、羈押之理由。四、應羈押之處所。第七十一條第三項及第四項之規定，於押票準用之。
+> 釋：一、本條新增。二、本法第一編第九章訊問被告之有關規定，原為法院及檢察官而設，惟七十一年八月修正本法第七十一條之一，已增列「司法警察官或司法警察，因調查犯罪嫌疑人犯罪情形及蒐集證據之必要，得使用通知書，通知犯罪嫌疑人到場詢問」，爰增訂第一百條之一之準用明文，以期配合。
 
-* 103 執行羈押，由司法警察將被告解送指定之看守所，該所長官驗收後，應於押票附記解到之年、月、日、時並簽名。第七十九條、第八十一條、第八十九條及第九十條之規定，於執行羈押準用之。
+* 100.2 司法警察官或司法警察詢問犯罪嫌疑人，不得於夜間行之。但有左列情形之一者，不在此限：一、經受詢問人明示同意者。二、於夜間經拘提或逮捕到場而查驗其人有無錯誤者。三、經檢察官或法官許可者。四、有急迫之情形者。犯罪嫌疑人請求立即詢問者，應即時為之。稱夜間者，為日出前，日沒後。
 
-* 104 被告及得為其輔佐人之人，得以言詞請求執行羈押之公務員或其所屬之機關付與押票之繕本。前項請求不得拒絕，並應立時付與。
+> 釋：一、本條新增。二、夜間乃休息之時間，為尊重人權及保障程序之合法性，並避免疲勞詢問，爰增訂本條，但為配合實際情況，如受詢問人明示同意者、或於夜間拘提或逮捕到場而查驗其人有無錯誤者、或經檢察官或法官同意者、或有急迫之情形者，則不在此限，以資兼顧。三、第一項所稱夜間之定義為何，應於本條予以明定俾資遵循，爰將原第一百四十六條第四項原有規定，移列於本條第二項。
 
-* 105 管束羈押之被告，應以維持羈押之目的及押所之秩序所必要者為限。被告得自備飲食及日用必需物品，並與外人接見、通信、受授書籍及其他物件。但押所得監視或檢閱之，如認其情事有足致其脫逃或湮滅、偽造、變造證據或勾串共犯或證人之虞者，並得禁止或扣押之。被告非有事實認為有暴行或逃亡、自殺之虞者，不得束縛其身體。束縛身體之處分，由押所長官命令之，並應即時陳報該管法院或檢察官核准。
+* 101 被告經法官訊問後，認為犯罪嫌疑重大，而有左列情形之一，非予羈押，顯難進行追訴、審判或執行者，得羈押之：一、逃亡或有事實足認為有逃亡之虞者。二、有事實足認為有湮滅、偽造、變造證據或勾串共犯或證人之虞者。三、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪者。法官為前項之訊問時，檢察官得到場陳述聲請羈押之理由及提出必要之證據。第一項各款所依據之事實，應告知被告及其辯護人，並記載於筆錄。
 
-* 106 羈押被告之處所，檢察官應勤加視察；按旬將視察情形呈報主管長官，並通知法院。
+> 釋：羈押處分，剝奪人民身體之自由，嚴重影響人民權益，現行條文規定之羈押要件及羈押理由，尚嫌簡略，爰就羈押之要件及羈押之理由設更明確且嚴謹之規定，用符法制。又為使被告於受訊問時，有辯護人到場，俾能對被告為適當之保障，增訂第二項明定應告知被告得選任辯護人到場，以資明確；另規定第一項所依據之事實，應告知被告及其辯護人，並記載於筆錄，以資周延。
 
-* 107 羈押於其原因消滅時，應即撤銷，將被告釋放。
+* 101.1 被告經法官訊問後，認為犯左列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十四條之強制猥褻罪、第二百二十七條姦淫或猥褻罪、第二百七十七條第一項之傷害罪。但未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十一條、第三百二十二條之竊盜罪。六、刑法第三百二十五條至第三百二十七條之搶奪罪。七、刑法第三百二十九條之準強盜罪。八、刑法第三百四十條之常業詐欺罪。九、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
 
-* 108 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，由法院裁定延長之。在偵查中延長羈押期間，應由檢察官聲請所屬法院裁定。延長羈押期間，每次不得逾二月，偵查中以一次為限，如所犯最重本刑為十年以下有期徒刑以下之刑者，審判中第一審、第二審以三次為限，第三審以一次為限。案件經發回者，其延長羈押期間之次數，應更新計算。羈押期間已滿未經起訴或裁判者，視為撤銷羈押。但得命具保、責付或限制住居。案件經上訴者，延長羈押期間，由上訴審法院裁定之。但卷宗及證物尚在原審法院者，應由原審法院裁定之。
+> 釋：一、本條新增。二、被告經法官訊問後，雖有第一百零一條第一項各款情形，而無羈押必要者，得逕命具保、責付或限制住居，與前條之羈押，均屬訊問被告後之程序，為使法條次序連貫，爰將現行法第一百二十條修正移列本條，並配合羈押要件之修正，將現行條文所引「第七十六條」修正為「前條第一項」。
+
+* 101.2 被告經法官訊問後，雖有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無羈押之必要者，得逕命具保、責付或限制住居；其有第一百十四條各款所定情形之一者，非有不能具保、責付或限制住居之情形，不得羈押。
+
+> 釋：一、本條新增。二、被告無羈押之必要，逕命具保、責付或限制住居者，其時間順序係在訊問之後，為使法條連貫，爰將第一百二十條刪除後，增訂為本條。
+
+* 102 羈押被告，應用押票。押票，應按被告指印，並記載左列事項：一、被告之姓名、性別、年齡、出生地及住所或居所。二、案由及觸犯之法條。三、羈押之理由及其所依據之事實。四、應羈押之處所。五、羈押期間及其起算日。六、如不服羈押處分之救濟方法。第七十一條第三項之規定，於押票準用之。押票，由法官簽名。
+
+> 釋：一、第一項不修正。二、第二項增列第五、六款；第四款不予修正；餘均做文字修正。三、配合司法院釋字第三九二號解釋意旨，檢察官已不能再簽發押票，爰增列第四項「押票，由法官簽名」。四、由於增列第四項，第七十一條第四項有關檢察官開具傳票之準用規定已不復援用，爰刪除第三項中之原列「及第四項」四字。
+
+* 103 執行羈押，偵查中依檢察官之指揮；審判中依審判長或受命法官之指揮，由司法警察將被告解送指定之看守所，該所長官查驗人別無誤後，應於押票附記解到之年、月、日、時並簽名。執行羈押時，押票應分別送交檢察官、看守所、辯護人、被告或其指定之親友。第八十一條、第八十九條及第九十條之規定，於執行羈押準用之。
+
+> 釋：一、明確規定羈押之執行主體，以利實際上指揮司法警察及看守所執行被告之收押、借提等相關作業之依據，增修規定「羈押執行，偵查中依檢察官之指揮；審判中依審判長或受命法官之指揮。」二、增訂第二項。憲法第八條第二項及提審法第二條規定，人民因犯罪嫌疑被逮捕拘禁時，其逮捕拘禁機關應將逮捕拘禁原因，以書面告知本人及本人指定之親友，故押票自應送交被告及其指定之家屬。三、由於增列第二項，第七十九條有關拘票之準用規定已不復援用，爰將原第二項修正改列為第三項，並將「第七十九條」刪除，用資配合。
+
+* 103.1 偵查中檢察官、被告或其辯護人認有維護看守所及在押被告安全或其它正當事由者，得聲請法院變更在押被告之羈押處所。法院依前項聲請變更被告之羈押處所時，應即通知檢察官、看守所、辯護人、被告及其指定之親友。
+
+> 釋：一、本條新增。二、關於羈押之處所，涉及被告之防禦，看守所之管理等問題，故增訂本條文，規定法院得依檢察官、被告或其辯護人之聲請，將在押之被告移送其他看守所執行羈押。
+
+* 104 （刪除）
+
+> 釋：一、本條刪除。二、第一百零三條第二項已明定：「執行羈押時，押票應分別送交．．．被告及其指定之親友」，本條已無規定之必要，爰予刪除。
+
+* 105 管束羈押之被告，應以維持羈押之目的及押所之秩序所必要者為限。被告得自備飲食及日用必需物品，並與外人接見、通信、受授書籍及其他物件。但押所得監視或檢閱之。法院認被告為前項之接見、通信及受授物件有足致其脫逃或湮滅、偽造、變造證據或勾串共犯或證人之虞者，得依檢察官之聲請或依職權命禁止或扣押之。但檢察官或押所遇有急迫情形時，得先為必要之處分，並應即時陳報法院核准。依前項所為之禁止或扣押，其對象、範圍及期間等，偵查中由檢察官；審判中由審判長或受命法官指定並指揮看守所為之。但不得限制被告正當防禦之權利。被告非有事實足認為有暴行或逃亡、自殺之虞者，不得束縛其身體。束縛身體之處分，以有急迫情形者為限，由押所長官行之，並應即時陳報法院核准。
+
+> 釋：一、第一項不修正。二、原第二項本文及但書前段文字不修正，列為第二項。三、原第二項但書後段部分，參考日本及德國刑事訴訟法規定，羈押中被告之接見、通信、受授書籍及其他物件，押所雖得監視、檢閱，然有禁止或扣押之必要者，須由法院行之。但有急迫情形者，檢察官或押所得先為必要之處分，以因應實際需要，惟應即時陳報法院核准，以資兼顧。爰將該項但書後段修正改列為第三項。四、增訂本條第四項。明確規定其執行之主體偵查中檢察官對案情知之甚詳，具偵查之利益．故依本條所為之禁止或扣押之對象、範圍及期間，宜由檢察官在法院許可的範圍內，具體指定並指揮看守所為之；在審判中則逕由審判長或受命法官指定並指揮之。但均不得限制被告正當防禦之權利。五、為落實保護被告之人權，原第三項修正並改列為第五項，規定被告非有事實「足」認有暴行或逃亡、自殺之虞者，不得束縛其身體，並增列束縛身體之處分「以有急迫情形者為限」。另刪除「或檢察官」四字，以符合司法院釋字第三九二號解釋意旨。
+
+* 106 羈押被告之處所，檢察官應勤加視察，按旬將視察情形陳報主管長官，並通知法院。
+
+> 釋：依「公文程式條例」第二條第一項第二款規定，僅對總統呈請或報告時用「呈」，爰將「呈報」修正為「陳報」。
+
+* 107 羈押於其原因消滅時，應即撤銷羈押，將被告釋放。被告、辯護人及得為被告輔佐人之人得聲請法院撤銷羈押。檢察官於偵查中亦得為撤銷羈押之聲請。法院對於前項之聲請得聽取被告、辯護人或得為被告輔佐人之人陳述意見。偵查中經檢察官聲請撤銷羈押者，法院應撤銷羈押，檢察官得於聲請時先行釋放被告。偵查中之撤銷羈押，除依檢察官聲請者外，應徵詢檢察官之意見。
+
+> 釋：一、第一項不修正。二、偵查中之被告，卷證均在檢察署，其羈押原因是否消滅，檢察官最為清楚，爰增列第二項。三、縱使在審判中，檢察官仍具有維持公訴以及上訴之利益存在，故法院於決定撤銷或停止羈押時，不僅是偵查中，在審判中也應該要徵詢檢察官的意見。
+
+* 108 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，經法院依第一百零一條或第一百零一條之一之規定訊問被告後，以裁定延長之。在偵查中延長羈押期間，應由檢察官附具體理由，至遲於期間屆滿之五日前聲請法院裁定。前項裁定，除當庭宣示者外，於期間未滿前以正本送達被告者，發生延長羈押之效力。羈押期滿，延長羈押之裁定未經合法送達者，視為撤銷羈押。審判中之羈押期間，自卷宗及證物送交法院之日起算。起訴或裁判後送交前之羈押期間算入偵查中或原審法院之羈押期間。羈押期間自簽發押票之日起算。但羈押前之逮捕、拘提期間，以一日折算裁判確定前之羈押日數一日。延長羈押期間，偵查中不得逾二月，以延長一次為限。審判中每次不得逾二月，如所犯最重本刑為十年以下有期徒刑以下之刑者，第一審、第二審以三次為限。第三審以一次為限。案件經發回者，其延長羈押期間之次數，應更新計算。羈押期間已滿未經起訴或裁判者，視為撤銷羈押，檢察官或法院應將被告釋放；由檢察官釋放被告者，並應即時通知法院。
+
+> 釋：一、偵查中延長羈押期間，為期慎重，確保人權，爰修正為應由檢察官附具體理由，至遲於期間屆滿五日前聲請法院裁定，法院應依第一百零一條訊問被告後，始得裁定延長羈押期間。二、延長羈押期間之裁定，除當庭宣示者外，須於期間屆滿前以正本送達被告後，始發生延長羈押之效力。三、審判中之羈押期間，究應自何時起算，現行法未設明文，爰增訂自卷宗及證物送交法院之日起算之規定，並規定起訴或裁判後送交前之羈押期間算入偵查中或原審法院之羈押期間，以免適用上發生疑義。
 
 * 109 案件經上訴者，被告羈押期間如已逾原審判決之刑期者，應即撤銷羈押，將被告釋放。但檢察官為被告之不利益而上訴者，得命具保、責付或限制住居。
 
-* 110 被告及得為其輔佐人之人或辯護人，得隨時具保，聲請停止羈押。
+* 110 被告及得為其輔佐人之人或辯護人，得隨時具保，向法院聲請停止羈押。檢察官於偵查中得聲請法院命被告具保停止羈押。前二項具保停止羈押之審查，準用第一百零七條第三項之規定。偵查中法院為具保停止羈押之決定時，除有第一百十四條及本條第二項之情形外，應徵詢檢察官之意見。
 
-* 111 許可停止羈押之聲請者，應命提出保證書，並指定相當之保證金額。保證書以該管區域內殷實之人或商舖所具者為限，並應記載保證金額及依法繳納之事由。指定之保證金額，如聲請人願繳納或許由第三人繳納者，免提出保證書。繳納保證金，得許以有價證券代之。許可停止羈押之聲請者，得限制被告之住居。
+> 釋：一、羈押權係由法院行使，僅法院有許可停止羈押之權，爰明定具保聲請停止羈押，應向法院為之。二、偵查中羈押之被告，應賦予檢察官得聲請法院命具保停止羈押之權，爰在第二項訂定明文，俾檢察官之聲請，有法律上之依據。三、增訂第三項，明定偵查中之具保停止羈押，應徵詢檢察官之意見。但具保停止羈押，係由檢察官聲請者，自無須再向之徵詢意見，故設除外規定予以排除。
+
+* 111 許可停止羈押之聲請者，應命提出保證書，並指定相當之保證金額。保證書以該管區域內殷實之人所具者為限，並應記載保證金額及依法繳納之事由。指定之保證金額，如聲請人願繳納或許由第三人繳納者，免提出保證書。繳納保證金，得許以有價證券代之。許可停止羈押之聲請者，得限制被告之住居。
+
+> 釋：一、法律上之人包括自然人與法人，商舖既非法律上之人格主體，並無予以標列之必要，故將第二項「或商舖」刪除。二、第一、三、四、五項均不修正。
 
 * 112 被告係犯專科罰金之罪者，指定之保證金額，不得逾罰金之最多額。
 
 * 113 許可停止羈押之聲請者，應於接受保證書或保證金後，停止羈押，將被告釋放。
 
-* 114 羈押之被告，有左列情形之一者，如經具保聲請停止羈押，不得駁回：一、所犯最重本刑為一年以下有期徒刑、拘役或專科罰金之罪者。二、懷胎五月以上或生產後二月未滿者。三、現罹疾病，非保外治療顯難痊癒者。
+* 114 羈押之被告，有左列情形之一者，如經具保聲請停止羈押，不得駁回：一、所犯最重本刑為三年以下有期徒刑、拘役或專科罰金之罪者。但累犯、常業犯、有犯罪之習慣、假釋中更犯罪或依第一百零一條之一第一項羈押者，不在此限。二、懷胎五月以上或生產後二月未滿者。三、現罹疾病，非保外治療顯難痊癒者。
+
+> 釋：一、羈押處分剝奪人身自由，應審慎為之，爰將第一款限制輕罪羈押及具保聲請停止羈押不得駁回之基準，修正為最重本刑「三年」以下有期徒刑、拘役或專科罰金之罪，以兼顧被告之權益。惟被告如係累犯、常業犯或有犯罪之習慣者等，其惡性較重，故設但書予以除外。二、第二款及第三款均不修正。
 
 * 115 羈押之被告，得不命具保而責付於得為其輔佐人之人或該管區域內其他適當之人，停止羈押。受責付者，應出具證書，載明如經傳喚應令被告隨時到場。
 
 * 116 羈押之被告，得不命具保而限制其住居，停止羈押。
 
-* 117 停止羈押後，有左列情形之一者，得命再執行羈押：一、經合法傳喚，無正當之理由不到場者。二、受住居之限制而違背者。三、新發生第七十六條所定之情形者。
+* 116.1 第一百十條第二項至第四項之規定，於前二條之責付、限制住居準用之。
 
-* 118 具保停止羈押之被告逃匿者，應命具保人繳納指定之保證金額，並沒入之。不繳納者，強制執行。保證金已繳納者，沒入之。
+> 釋：一、本條新增。二、具保、責付或限制住居，均為停止羈押執行之方法，第一百十條第二項至第四項之規定，於法院依第一百十五條、第一百十六條命責付或限制住居而停止羈押時，宜予準用，爰增訂本條明定之。
 
-* 119 撤銷羈押或再執行羈押或因裁判而致羈押之效力消滅者，免除具保之責任。具保證書或繳納保證金之第三人，將被告預備逃匿情形，於得以防止之際報告法院，檢察官或司法警察官而聲請退保者，得准其退保。免除具保之責任或經退保者，應將保證書註銷，或將未沒入之保證金發還。前三項規定，於受責付者準用之。
+* 117 停止羈押後，有左列情形之一者，得命再執行羈押：一、經合法傳喚無正當之理由不到場者。二、受住居之限制而違背者。三、本案新發生第一百零一條各款所定情形之一者。偵查中有前項情形之一者，由檢察官聲請法院行之。再執行羈押之期間，應與停止羈押前已經過之羈押期間合併計算。法院依第一項之規定命再執行羈押時，準用第一百零三條第一項之規定。
 
-* 120 被告經訊問後，雖有第七十六條各款所定情形之一而無羈押之必要者，得逕命具保、責付或限制住居；其有第一百十四條各款所定情形之一者，非有不能具保、責付或限制住居之情形，不得羈押。
+> 釋：一、所謂停止羈押後之「再執行羈押」，是本案原羈押原因存續中，因認為無羈押之必要故以具保等停止羈押之後，因再發生有關本案羈押必要之情事，判斷之結果，認為又有羈押被告之必要時，命再執行羈押。故與他案之另行聲請羈押，或本案撤銷羈押後之重新聲請羈押之情形不同。因此，於本條第一項第三款中列進「本案」二字，以與他案之另行依第一百零一條之一規定另行聲請及決定羈押之情形區別。二、本案再執行羈押之期間，固應與停止羈押前已經過之期間一併計算，而非重行起算，增訂本條第三項。三、規定命再執行羈押之指揮執行的依據，準用第一百零三條第一項之規定，故增訂本條第四項。
 
-* 121 第一百零七條之撤銷羈押，第一百零八條第四項、第一百零九條之命具保、責付或限制住居，第一百十條、第一百十五條及第一百十六條之停止羈押，第一百十七條之再執行羈押，第一百十八條之沒入保證金，第一百十九條第二項之退保及前條之命具保、責付或限制住居，以法院之裁定或檢察官命令行之。案件在第二審上訴期間內或上訴中，而卷宗及證物尚在第一審法院者，前項處分，應由第一審法院裁定之。在第三審上訴期間內或上訴中者，由第二審法院裁定之。
+* 118 具保之被告逃匿者，應命具保人繳納指定之保證金額，並沒入之。不繳納者，強制執行。保證金已繳納者，沒入之。前項規定，於檢察官依第九十三條第三項但書及第二百二十八條第三項命具保者，準用之。
+
+> 釋：一、命被告具保之情形，不侷限於第一百十條之聲請停止羈押，原條文所示，故修正第一項，將「停止羈押」四字刪除。二為配合修正後第九十三條第三項但書及第二百二十八條第三項檢察官得命具保規定，增列第二項，明定於檢察官命具保中被告逃匿時，準用第一項規定，亦得沒入保證金。
+
+* 119 撤銷羈押、再執行羈押、受不起訴處分或因裁判而致羈押之效力消滅者，免除具保之責任。具保證書或繳納保證金之第三人，將被告預備逃匿情形，於得以防止之際報告法院、檢察官或司法警察官而聲請退保者，法院或檢察官得准其退保。但另有規定者，依其規定。免除具保之責任或經退保者，應將保證書註銷或將未沒入之保證金發還。前三項規定，於受責付者準用之。
+
+> 釋：一、第一項原規定免除具保之責任，限於撤銷羈押、再執行羈押或因裁判而致羈押之效力消滅三種情形，惟第二百五十九條第一項亦有被告受不起訴處分而視為撤銷羈押之規定，此時具保人具保之責任，亦應予以免除，現行法就此漏未規定，爰予增訂。二、第二項關於得准其退保者，為求明確，增列「法院或檢察官」，並增訂但書規定，以求週延。三、第三項及第四項均不修正。
+
+* 120 （刪除）
+
+> 釋：本條刪除，另行增訂為第一百零一條之一。
+
+* 121 第一百零七條第一項之撤銷羈押、第一百零九條之命具保、責付或限制住居、第一百十條第一項、第一百十五條及第一百十六條之停止羈押、第一百十八條第一項之沒入保證金、第一百十九條第二項之退保，以法院之裁定行之。案件在第三審上訴中，而卷宗及證物已送交該法院者，前項處分由第二審法院裁定之。第二審法院於為前項裁定前，得向第三審法院調取卷宗及證物。檢察官依第一百十八條第二項之沒入保證金、第一百十九條第二項之退保及第九十三條第三項但書、第二百二十八條第三項命具保、責付或限制住居，於偵查中以檢察官之命令行之。
+
+> 釋：一、第一百零七條、第一百十條及第一百十八條均新增第二項，原條文已改列為第一項，第一百零八條第四項已修正為第六項，第一百二十條已修正移列為第一百零一條之一，爰將本條第一項文字配合修正。二、第三審係法律審，不宜就事實上之事項而為裁定，故案件在第三審上訴中且卷宗及證物已送交該法院者，於第三審法院羈押期間內，有關第一項處分，規定由第二審法院裁定。惟第二審法院因無卷證資料，倘為裁定有參閱必要，自得向第三審法院調閱，爰增訂第二項及第三項規定。三、檢察官既仍得為具保、責付或限制住居之決定，則於偵查中之沒入保證金、退保及命具保、責付或限制住居，亦可由檢察官以命令行之，爰增訂第四項。
 
 * 122 對於被告之身體、物件及住宅或其他處所，必要時得搜索之。對於第三人之身體、物件及住宅或其他處所，以有相當理由可信為被告或應扣押之物存在時為限，得搜索之。
 
@@ -310,7 +382,9 @@
 
 * 145 司法警察或司法警察官執行搜索及扣押，應以搜索票示第一百四十八條在場之人。
 
-* 146 有人住居或看守之住宅或其他處所，不得於夜間入內搜索或扣押。但經住居人、看守人或可為其代表之人承諾或有急迫之情形者，不在此限。於夜間搜索或扣押者，應記明其事由於筆錄。日間已開始搜索或扣押者，得繼續至夜間。稱夜間者，為日出前，日沒後。
+* 146 有人住居或看守之住宅或其他處所，不得於夜間入內搜索或扣押。但經住居人、看守人或可為其代表之人承諾或有急迫之情形者，不在此限。於夜間搜索或扣押者，應記明其事由於筆錄。日間已開始搜索或扣押者，得繼續至夜間。第一百條之二第三項之規定，於夜間搜索或扣押準用之。
+
+> 釋：一、為配合增訂第一百條之二第二項，將本條第四項改為準用之體例。二、第一項至第三項均不修正。
 
 * 147 左列處所，夜間亦得入內搜索或扣押：一、假釋人住居或使用者。二、旅店、飲食店或其他於夜間公眾可以出入之處所，仍在公開時間內者。三、常用為賭博或妨害風化之行為者。
 
@@ -472,17 +546,29 @@
 
 * 225 宣示判決，應朗讀主文，說明其意義，並告以理由之要旨。宣示裁定，應告以裁定之意旨；其敘述理由者，並告以理由。前二項應宣示之判決或裁定，於宣示之翌日公告之，並通知當事人。
 
-* 226 裁判應制作裁判書者，為裁判之推事應於裁判宣示後三日內，將原本交付書記官。書記官應於裁判原本，記明接受之年、月、日並簽名。
+* 226 裁判應製作裁判書者，應於裁判宣示後，當日將原本交付書記官。但於辯論終結之期日宣示判決者，應於五日內交付之。書記官應於裁判原本記明接受之年、月、日並簽名。
+
+> 釋：一、配合第三百十一條之宣示判決期限已修正酌予延長，為兼顧當事人之權益，俾能早日將裁判正本送達當事人，爰修正第一項，規定應於裁判宣示後，當日即須將裁判書原本交付書記官。然於辯論終結之期日宣示判決者，判決原本往往不及於當日作成，特增列但書規定。又裁判書應由法官製作，第五十條已有明定，原本作成後，自當交付書記官，爰就第一項併為文字上之修正。二、第二項不修正。
 
 * 227 裁判制作裁判書者，除有特別規定外，應以正本送達於當事人、代理人、辯護人及其他受裁判之人。前項送達，自接受裁判原本之日起，至遲不得逾七日。
 
-* 228 檢察官因告訴、告發、自首或其他情事知有犯罪嫌疑者，應即開始偵查。實施偵查非有必要，不得先行傳訊被告。
+* 228 檢察官因告訴、告發、自首或其他情事知有犯罪嫌疑者，應即開始偵查。實施偵查非有必要，不得先行傳訊被告。被告經傳喚、自首或自行到場者，檢察官於訊問後認有第一百零一條第一項各款或第一百零一條之一第一項各款所定情形之一而無聲請羈押之必要者，得命具保、責付或限制住居。但認有羈押之必要者，得予逮捕，並將逮捕所依據之事實告知被告後，聲請法院羈押之。第九十三條第二項、第三項、第五項之規定於本項之情形準用之。
 
-* 229 左列各員，於其管轄區域內為司法警察官，有協助檢察官偵查犯罪之職權：一、縣（市）長。二、警政廳長、警務處長或警察局長。三、憲兵隊長官。前項司法警察官，應將偵查之結果，移送該管檢察官；如接受被拘提或逮捕之犯罪嫌疑人認其有羈押之必要時，應於二十四小時內，移送該管檢察官。但檢察官命其移送者，應即時移送。
+> 釋：一、第一項及第二項均不修正。二、規定被告經傳喚、自首或自行到場者，檢察官在特定情況下亦得聲請法院羈押。
 
-* 230 左列各員為司法警察官，應聽檢察官之指揮，偵查犯罪：一、警察官長。二、憲兵官長、士官。三、依法令關於特定事項，得行司法警察官之職權者。前項司法警察官知有犯罪嫌疑者，應報告前條之該管檢察官或司法警察官。但得不待其指揮，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+* 229 左列各員，於其管轄區域內為司法警察官，有協助檢察官偵查犯罪之職權：一、警政署署長、警政廳廳長、警察局局長或警察總隊總隊長。二、憲兵隊長官。前項司法警察官，應將偵查之結果，移送該管檢察官；如接受被拘提或逮捕之犯罪嫌疑人，除有特別規定外，應解送該管檢察官。但檢察官命其解送者，應即解送。被告或犯罪嫌疑人未經拘提或逮捕者，不得解送。
+
+> 釋：一、第一項部分：（一）縣（市）長兼理司法之方式，已為民主法治國家所不取，爰將本項第一款刪除。（二）第二款改列為第一款，並配合現制及參照調度司法警察條例第二條第二款，將原規定修正為「警政署署長」、「警政廳廳長」、「警察局局長」，另增列「警察總隊總隊長」為司法警察官。（三）第三款改列為第二款。二、依司法院釋字第三九二號解釋意旨，憲法第八條第二項之二十四小時，檢警應同受約束，爰將「應於二十四小時內移送該管檢察官」修正為「應解送該管檢察官」；另因有第九十二條第二項但書之增訂，增列「除有特別規定外」字樣，以資配合。三、為保障人權，對非現行犯、通緝犯或拘提到案之人犯，規定不得解送檢察官處理，爰增列第三項。
+
+* 230 左列各員為司法警察官，應受檢察官之指揮，偵查犯罪：一、警察官長。二、憲兵隊官長、士官。三、依法令關於特定事項，得行司法警察官之職權者。前項司法警察官知有犯罪嫌疑者，應報告前條之該管檢察官或司法警察官。但得不待其指揮，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+
+> 釋：一、第一項第二款「憲兵官長、士官」修正為「憲兵隊官長、士官」。餘均未予修正。二、第二項係配合第一項修正意旨酌作文字修正。
 
 * 231 左列各員為司法警察，應受檢察官及司法警察官之命令，偵查犯罪：一、警察。二、憲兵。三、依法令關於特定事項，得行司法警察之職權者。司法警察知有犯罪嫌疑者，應報告該管檢察官或司法警察官。但得不待其命令，逕行調查犯罪嫌疑人犯罪情形及蒐集證據。
+
+* 231.1 檢察官對於司法警察官或司法警察移送或報告之案件，認為調查未完備者，得將卷證發回，命其補足，或發交其他司法警察官或司法警察調查。司法警察官或司法警察應於補足或調查後，再行移送或報告。對於前項之補足或調查，檢察官得限定時間。
+
+> 釋：一、本條新增。二、賦予檢察官得限期命警察再行調查或移回自行偵察之立案審查權。
 
 * 232 犯罪之被害人，得為告訴。
 
@@ -544,7 +630,9 @@
 
 * 258 上級法院首席檢察官或檢察長認再議之聲請為無理由者，應駁回之；認為有理由者，應分別為左列處分：一、偵查未完備者，命令原法院檢察官續行偵查。二、偵查已完備者，命令原法院檢察官起訴。
 
-* 259 羈押之被告受不起訴之處分者，視為撤銷羈押。但再議期間內或聲請再議中，得命具保、責付或限制住居；遇有必要情形，並得命繼續羈押之。為不起訴之處分者，扣押物應即發還。但應沒收或為偵查他罪或他被告之用應留存者，不在此限。
+* 259 羈押之被告受不起訴之處分者，視為撤銷羈押，檢察官應將被告釋放，並應即時通知法院。為不起訴處分者，扣押物應即發還。但再議期間內或聲請再議中遇有必要情形或應沒收或為偵查他罪或他被告之用應留存者，不在此限。
+
+> 釋：一、為使偵查中之羈押期間切實遵守第一百零八條之規定，以維護人權，刪除第一項但書規定。二、羈押之被告受不起訴之處分者，既視為撤銷羈押，雖在再議期間內或聲請再議中，亦不得命具保、責付或限制住居，為保護被告權益，爰訂定明文，規定檢察官應將被告釋放。惟羈押權係由法院行使，法院對檢察官之釋放被告，自得為必要之審查，併明定檢察官釋放被告後，應即陳報法院。三、案件於不起訴處分後，依本條第二項規定，除係應沒收或為偵查他罪或他被告之用，應留存者外，應即發還。惟此際如經告訴人聲請再議，經撤銷原處分，命令續行偵查或起訴時，該原可為證據或得沒收之物，倘因發還致滅失，而無法再行扣押，勢將影響該案之續行偵查及日後之審判。爰參照第三百十七條但書之體例，於本條第二項但書增列「再議期間內或聲請再議中遇有必要情形」，以資適用。
 
 * 260 不起訴處分已確定者，非有左列情形之一，不得對於同一案件再行起訴：一、發見新事實或新證據者。二、有第四百二十條第一項第一款、第二款、第四款或第五款所定得為再審原因之情形者。
 
@@ -568,7 +656,9 @@
 
 * 270 撤回起訴與不起訴處分有同一之效力，以其撤回書視為不起訴處分書，準用第二百五十五條至第二百六十條之規定。
 
-* 271 審判期日，應傳喚被告或其代理人，並通知檢察官、辯護人、輔佐人。
+* 271 審判期日，應傳喚被告或其代理人，並通知檢察官、辯護人、輔佐人。審判期日，應傳喚被害人或其家屬並予陳述意見之機會。但經合法傳喚無正當理由不到場，或陳明不願到場，或法院認為不必要或不適宜者，不在此限。
+
+> 釋：一、第一項不予修正。二、增訂第二項。
 
 * 272 第一次審判期日之傳票，至遲應於七日前送達；刑法第六十一條所列各罪之案件至遲應於五日前送達。
 
@@ -654,7 +744,9 @@
 
 > 釋：裁判書類之製作每每耗費推事甚多精力，有罪判決中諭知免刑或緩刑、或科處罰金、六月以下有期徒刑或拘役得易科罰金者，當事人常均甘服而無爭，其判決書之記載允宜予以簡化，並得引用起訴書所記載之事實，以確定其既判力之範圍，而節省推事之時間、精力，使其專心致力於較複雜之案件，必有利於司法之革新。
 
-* 311 宣示判決，應自辯論終結之日起七日內為之。
+* 311 宣示判決，應自辯論終結之日起十四日內為之。
+
+> 釋：為使合議制法院能詳為評議，受命法官或獨任審判之法官可詳細製作判決書原本，俾求增進裁判品質，爰參酌實務需要，兼顧更新審理間隔日數之限制，將宣示判決期限自辯論終結之日起七旨內為之，修正為十四內為之。
 
 * 312 宣示判決，被告雖不在庭亦應為之。
 
@@ -794,7 +886,9 @@
 
 * 378 判決不適用法則或適用不當者，為違背法令。
 
-* 379 有左列情形之一者，其判決當然為違背法令：一、法院之組織不合法者。二、依法律或裁判應迴避之推事參與審判者。三、禁止審判公開非依法律之規定者。四、法院所認管轄之有無係不當者。五、法院受理訴訟或不受理訴訟係不當者。六、除有特別規定外，被告未於審判期日到庭而逕行審判者。七、依本法應用辯護人之案件或已經指定辯護人之案件，辯護人未經到庭辯護而逕行審判者。八、除有特別規定外，未經檢察官或自訴人到庭陳述而為審判者。九、依本法應停止或更新審判而未經停止或更新者。十、依本法應於審判期日調查之證據而未予調查者。十一、未與被告以最後陳述之機會者。十二、除本法有特別規定外，已受請求之事項未予判決，或未受請求之事項予以判決者。十三、未經參與審理之推事參與判決者。十四、判決不載理由或所載理由矛盾者。
+* 379 有左列情形之一者，其判決當然違背法令：一、法院之組織不合法者。二、依法律或裁判應迴避之法官參與審判者。三、禁止審判公開非依法律之規定者。四、法院所認管轄之有無係不當者。五、法院受理訴訟或不受理訴訟係不當者。六、除有特別規定外，被告未於審判期日到庭而逕行審判者。七、依本法應用辯護人之案件或已經指定辯護人之案件，辯護人未經到庭辯護而逕行審判者。八、除有特別規定外，未經檢察官或自訴人到庭陳述而為審判者。九、依本法應停止或更新審判而未經停止或更新者。十、依本法應於審判期日調查之證據而未予調查者。十一、未與被告以最後陳述之機會者。十二、除本法有特別規定外，已受請求之事項未予判決，或未受請求之事項予以判決者。十三、未經參與審理之法官參與判決者。十四、判決不載理由或所載理由矛盾者。
+
+> 釋：一、配合法院組織法之用語，將「推事」修正為「法官」。二、其餘不修正。
 
 * 380 除前條情形外，訴訟程序雖係違背法令而顯然於判決無影響者，不得為上訴之理由。
 
@@ -934,9 +1028,9 @@
 
 * 448 非常上訴之判決，除依前條第一項第一款但書及第二項規定者外，其效力不及於被告。
 
-* 449 第三百七十六條所規定之案件，第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以簡易判決處刑。但有必要時，應於處刑前訊問被告。前項案件檢察官依通常程序起訴，經法院訊問被告，認為宜以簡易判決處刑者，得不經通常審判程序，逕以簡易判決處刑。依前二項判決所科之刑以六月以下有期徒刑、拘役或罰金為限。
+* 449 第一審法院依被告在偵查中之自白或其他現存之證據，已足認定其犯罪者，得因檢察官之聲請，不經通常審判程序，逕以簡易判決處刑。但有必要時，應於處刑前訊問被告。前項案件檢察官依通常程序起訴，經法院訊問，被告自白犯罪，認為宜以簡易判決處刑者，得不經通常審判程序，逕以簡易判決處刑。依前二項規定所科之刑以宣告緩刑、得易科罰金之有期徒刑或拘役及罰金為限。
 
-> 釋：一、配合刑事訴訟法第三百七十六條修正不得上訴第三審案件範圍，規定為得行簡易訴訟之案件範圍，爰修正第一項。二、依現行規定，檢察官若不聲請簡易處刑時，法院即受其限制，不得逕以簡易判決處刑，只得依通常程序審理，致「簡易程序」之功能不彰，故增訂第二項並修正第三項，擴大得行簡易程序之範圍。
+> 釋：一、檢察官聲請以簡易判決處刑無須限於現行法所規定之第三百七十六條之案件，故刪除第一項前段文字。二、為擴大簡易處刑適用之範圍，使簡易程序之適用範圍限於「所科之刑以宣告緩刑得易科罰金之有期徒刑及拘役或罰金為限。」
 
 * 449.1 簡易程序案件，得由簡易庭辦理之。
 
@@ -944,15 +1038,17 @@
 
 * 450 以簡易判決處刑時，得併科沒收或為其他必要之處分。第二百九十九條第一項但書之規定，於前項判決準用之。
 
-* 451 檢察官偵查第三百七十六條所規定之案件時，審酌情節認為宜以簡易判決處刑者，應即以書面為聲請。第二百六十四條之規定，於前項聲請準用之。第一項聲請，與起訴有同一之效力。被告於偵查中自白者，得請求檢察官為第一項之聲請。
+* 451 檢察官審酌案件情節，認為宜以簡易判決處刑者，應即以書面為聲請。第二百六十四條之規定，於前項聲請準用之。第一項聲請，與起訴有同一之效力。被告於偵查中自白者，得請求檢察官為第一項之聲請。
 
-> 釋：一、配合刑事訴訟法第三百七十六條第一項修正不得上訴第三審案件之範圍，修正第一項。二、因應增訂及修正第四百四十九條第二、三項擴大得行簡易程序之範圍，刪除本條第五、六項。三、第二、三、四項規定未修正。
+> 釋：配合第四四九條之修正，檢察官聲請以簡易判決處刑自無須限於現行法所規定之第三百七十六條之案件，但自應審酌第四四九條所規定之要件。
 
-* 451.1 前條第一項之案件，被告於偵查中自白者，得向檢察官表示願受科刑之範圍，檢察官得以被告之表示為基礎，向法院為具體之求刑。被告自白犯罪未為前項之表示者，在審判中得向法院為之，檢察官亦得向法院為具體之求刑。
+* 451.1 前條第一項之案件，被告於偵查中自白者，得向檢察官表示願受科刑之範圍或願意接受緩刑之宣告，檢察官同意者，應記明筆錄，並即以被告之表示為基礎，向法院求刑或為緩刑宣告之請求。檢察官為前項之求刑或請求前，得徵詢被害人之意見，並斟酌情形，經被害人同意，命被告為左列各款事項：一、向被害人道歉。二、向被害人支付相當數額之賠償金。被告自白犯罪未為第一項之表示者，在審判中得向法院為之，檢察官亦得依被告之表示向法院求刑或請求為緩刑之宣告。第一項及前項情形，法院應於檢察官求刑或緩刑宣告請求之範圍內為判決。但有左列情形之一者，不在此限：一、被告所犯之罪不合第四百四十九條所定得以簡易判決處刑之案件者。二、法院認定之犯罪事實顯然與檢察官據以求處罪刑之事實不符，或於審判中發現其他裁判上一罪之犯罪事實，足認檢察官之求刑顯不適當者。三、法院於審理後，認應為無罪、免赦、不受理或管轄錯誤判決之諭知者。四、檢察官之請求顯有不當或顯失公平者。
 
-> 釋：為落實簡易程序之簡易可行，允宜賦被告於偵查中及審判中表示願受科刑範圍之機會，檢察官亦得為具體之求刑，並於法院依其所請科刑後限制其上訴權（第四百五十五條之一第二項）。
+> 釋：一、本條新增。二、被告於偵查中自白者，經檢察官同意並記明筆錄後，檢察官應以被告表示為基礎，向法院為具體之求刑或求為緩刑之宣告，此一制度，使檢察官求處被告緩刑或得易科罰金之罪並記明筆錄時，得藉此交換被告同意自白，且於第四項增設此時法官原則上必須受檢察官求刑及求為緩刑宣告之拘束，此係引進認罪協商制度之精神。
 
-* 452 檢察官聲請以簡易判決處刑案件，經法院認為不得或不宜以簡易判決處刑者，應適用通常程序審判之。
+* 452 檢察官聲請以簡易判決處刑之案件，經法院認為有第四百五十一條之一第四項但書之情形者，應適用通常程序審判之。
+
+> 釋：檢察官聲請以簡易判決處刑之案件，應僅限於法院認為有第四五一條之一第四項但書之情事，始得改以通常程序為判決，始能符合認罪協商制度之精神。
 
 * 453 以簡易判決處刑案件，法院應立即處分。
 
