刑事訴訟法 1997.12.19

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -120,7 +120,9 @@
 
 * 54 關於訴訟之文書，法院應保存者，由書記官編為卷宗。卷宗滅失案件之處理，另以法律定之。
 
-* 55 被告、自訴人、告訴人、附帶民事訴訟當事人、代理人、辯護人或輔佐人為接受文書之送達，應將其住、居所或事務所向法院或檢察官陳明；如在法院所在地無住、居所或事務所者，應陳明以在該地有住、居所或事務所之人為送達代收人。前項之陳明，其效力及於同地之各級法院。送達向送達代收人為之者，視為送達於本人。
+* 55 被告、自訴人、告訴人、附帶民事訴訟當事人、代理人、辯護人、輔佐人或被害人為接受文書之送達，應將其住所、居所或事務所向法院或檢察官陳明。被害人死亡者，由其配偶、子女或父母陳明之。如在法院所在地無住所、居所或事務所者，應陳明以在該地有住所、居所或事務所之人為送達代收人。前項之陳明，其效力及於同地之各級法院。送達向送達代收人為之者，視為送達於本人。
+
+> 釋：為強化被害人刑事訴訟之主體地位，應將犯罪被害人納入應受送達人之範圍內。
 
 * 56 前條之規定，於在監獄或看守所之人，不適用之。送達於在監獄或看守所之人，應囑託該監所長官為之。
 
@@ -236,13 +238,17 @@
 
 * 100 被告對於犯罪之自白及其他不利之陳述，並其所陳述有利之事實與指出證明之方法，應於筆錄內記載明確。
 
-* 100.1 本章之規定，於司法警察官或司法警察詢問犯罪嫌疑人時，準用之。
+* 100.1 訊問被告，應全程連續錄音；必要時，並應全程連續錄影。但有急迫情況且經記明筆錄者，不在此限。筆錄內所載之被告陳述與錄音或錄影之內容不符者，除有前項但書情形外，其不符之部分，不得作為證據。第一項錄音、錄影資料之保管方法，分別由司法院、行政院定之。
 
-> 釋：一、本條新增。二、本法第一編第九章訊問被告之有關規定，原為法院及檢察官而設，惟七十一年八月修正本法第七十一條之一，已增列「司法警察官或司法警察，因調查犯罪嫌疑人犯罪情形及蒐集證據之必要，得使用通知書，通知犯罪嫌疑人到場詢問」，爰增訂第一百條之一之準用明文，以期配合。
+> 釋：一、司法警察官或司法警察之詢問筆錄，在訴訟程序中，時有被告或辯解非其真意，或辯解遭受刑求，屢遭質疑，為建立詢問筆錄之公信力，以擔保程序之合法，所以詢問過程應全程連續錄音並錄影，並應於一定期間內妥為保存，偵審機關如認為有必要時即可調取勘驗，以期發現真實，並確保自白之任意性。二、錄音及錄影之資料由所屬機關另行保管，避免由原承辦人員保管而易發生遺失或竄改之流弊。
 
-* 100.2 司法警察官或司法警察詢問犯罪嫌疑人，不得於夜間行之。但有左列情形之一者，不在此限：一、經受詢問人明示同意者。二、於夜間經拘提或逮捕到場而查驗其人有無錯誤者。三、經檢察官或法官許可者。四、有急迫之情形者。犯罪嫌疑人請求立即詢問者，應即時為之。稱夜間者，為日出前，日沒後。
+* 100.2 本章之規定，於司法警察官或司法警察詢問犯罪嫌疑人時，準用之。
 
-> 釋：一、本條新增。二、夜間乃休息之時間，為尊重人權及保障程序之合法性，並避免疲勞詢問，爰增訂本條，但為配合實際情況，如受詢問人明示同意者、或於夜間拘提或逮捕到場而查驗其人有無錯誤者、或經檢察官或法官同意者、或有急迫之情形者，則不在此限，以資兼顧。三、第一項所稱夜間之定義為何，應於本條予以明定俾資遵循，爰將原第一百四十六條第四項原有規定，移列於本條第二項。
+> 釋：本條為原第一百條之一條次變更。
+
+* 100.3 司法警察官或司法警察詢問犯罪嫌疑人，不得於夜間行之。但有左列情形之一者，不在此限：一、經受詢問人明示同意者。二、於夜間經拘提或逮捕到場而查驗其人有無錯誤者。三、經檢察官或法官許可者。四、有急迫之情形者。犯罪嫌疑人請求立即詢問者，應即時為之。稱夜間者，為日出前，日沒後。
+
+> 釋：一、本條新增。二、本條為原第一百條之二條次變更。
 
 * 101 被告經法官訊問後，認為犯罪嫌疑重大，而有左列情形之一，非予羈押，顯難進行追訴、審判或執行者，得羈押之：一、逃亡或有事實足認為有逃亡之虞者。二、有事實足認為有湮滅、偽造、變造證據或勾串共犯或證人之虞者。三、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪者。法官為前項之訊問時，檢察官得到場陳述聲請羈押之理由及提出必要之證據。第一項各款所依據之事實，應告知被告及其辯護人，並記載於筆錄。
 
@@ -605,6 +611,10 @@
 * 247 關於偵查事項，檢察官得請該管機關為必要之報告。
 
 * 248 訊問證人、鑑定人時，如被告在場者，被告得親自詰問；詰問有不當者，檢察官得禁止之。預料證人、鑑定人於審判時不能訊問者，應命被告在場。但恐證人、鑑定人於被告前不能自由陳述者，不在此限。
+
+* 248.1 被害人於偵查中受訊問時，得由其法定代理人、配偶、直系或三親等內旁系血親、家長、家屬、醫師或社工人員陪同在場，並得陳述意見。於司法警察官或司法警察調查時，亦同。
+
+> 釋：一、本條新增。二、刑事訴訟程多中一向忽視被害人受害後心理、生理、工作等等急待重建之特殊性，在未獲重建前便因需獨自面對被告、辯護人之攻擊，偵、審之調查等而再受傷害，因而規定一定資格或關係之人陪同，以減少二度傷害。
 
 * 249 實施偵查遇有急迫情形，得命在場或附近之人為相當之輔助。檢察官於必要時，並得請附近軍事官長派遣軍隊輔助。
 
@@ -970,7 +980,9 @@
 
 * 419 抗告，除本章有特別規定外，準用第三編第一章關於上訴之規定。
 
-* 420 有罪之判決確定後，有左列情形之一者，為受判決人之利益，得聲請再審：一、原判決所憑之證物已證明其為偽造或變造者。二、原判決所憑之證言、鑑定或通譯已證明其為虛偽者。三、受有罪判決之人，已證明其係被誣告者。四、原判決所憑之通常法院或特別法院之裁判已經確定裁判變更者。五、參與原判決或前審判決或判決前所行調查之推事，或參與偵查或起訴之檢察官，因該案件犯職務上之罪已經證明者。六、因發見確實之新證據，足認受有罪判決之人應受無罪、免訴、免刑或輕於原判決所認罪名之判決者。前項第一款至第三款及第五款情形之證明，以經判決確定，或其刑事訴訟不能開始或續行非因證據不足者為限，得聲請再審。
+* 420 有罪之判決確定後，有左列情形之一者，為受判決人之利益，得聲請再審：一、原判決所憑之證物已證明其為偽造或變造者。二、原判決所憑之證言、鑑定或通譯已證明其為虛偽者。三、受有罪判決之人，已證明其係被誣告者。四、原判決所憑之通常法院或特別法院之裁判已經確定裁判變更者。五、參與原判決或前審判決或判決前所行調查之法官，或參與偵查或起訴之檢察官，因該案件犯職務上之罪已經證明者，或因該案件違法失職已受懲戒處分，足以影響原判決者。六、因發現確實之新證據，足認受有罪判決之人應受無罪、免訴、免刑或輕於原判決所認罪名之判決者。前項第一款至第三款及第五款情形之證明，以經判決確定，或其刑事訴訟不能開始或續行非因證據不足者為限，得聲請再審。
+
+> 釋：現行法對法官、檢察官於案件審理時，有違法失職情事，當事人可聲請再審之要件，僅規定法官、檢察官於因該案犯罪經證明者方得成立。因此即，便司法人員於案件處理時違法，得追究刑事責任之比例極微，多以行政處分代之，造成法律規定上嚴重缺失。道致受損害之當事人已遭判決確定後，冤屈毫無平反機會，對人權之侵害至鉅。為此將審理案件違法失職之法官、檢察官懲戒處分確定之情形，納入得聲請再審之要件，以符合法律維護公平正業之原則。
 
 * 421 不得上訴於第三審法院之案件，除前條規定外，其經第二審確定之有罪判決，如就足生影響於判決之重要證據漏未審酌者，亦得為受判決人之利益，聲請再審。
 
